avoid stating files during restore of recent files

even for 'local' files this might result in hangs if the
mount point is not responsive

BUG: 460868